<resources>
    <string name="app_name">MyMaze</string>
    <string name="action_settings">Settings</string>
    <string name="menu">menu</string>
    <string name="move">move</string>
    <string name="info">info</string>
    <string name="please_input">place input </string>
    <string name="sure">确定</string>
    <string name="input">输入地图边长</string>
    <string name="noimage">noImage</string>
    <string name="myCollection">我的收藏</string>
    <string name="aboutUs">关于我们</string>
    <string name="soft_function">操作说明</string>
    <string name="pay">打赏</string>
    <string name="change_picture">更换背景图片</string>
    <string name="isOver">已经到底了！</string>
    <string name="about_us_info">    mymaze是一款由本人独立制作毫无任何实际用途的软件，它改自先前暑期小作业一个作品
                                ，只不过是语言由c++转变成java，cpp文件变成apk文件，电脑上移到手机上，虽界面丑陋，
                                毫无实际用途，但其运行时的特殊视觉效果和制作时所让我学习到的东西让我乐此不疲，并最终
                                变成了现在你眼中的成品。\n\n

                                如有任何问题，建议，合作意向，欢迎骚扰：\n
                                电话：18279353533  QQ：985934131\n
                                微信：H18279353533\n 邮箱：985934131@qq.com\n\n</string>
    <string name="_233">233</string>
    <string name="info_about_maze">maze</string>
    <string name="changeLine">绘制线条颜色</string>
    <string name="changeMoveDotColor">移动点颜色</string>
    <string name="changePathColor">路径点颜色</string>
    <string name="changeBackPicture">修改背景图片</string>
    <string name="pace" />

    <drawable name="normal_color">#fb4a4a</drawable>
    <drawable name="press_color">#f60303</drawable>

    <color name="refresh">#fb4a4a</color>>



    <color name="white">#ffffff</color> <!-- 白色 -->
    <color name="gold">#ffd700</color> <!-- 金色 -->
    <color name="pink">#ffc0cb</color> <!-- 粉红色 -->
    <color name="lightpink">#ffb6c1</color> <!-- 亮粉红色 -->
    <color name="orange">#ffa500</color> <!-- 橙色 -->
    <color name="lightsalmon">#ffa07a</color> <!-- 亮肉色 -->
    <color name="darkorange">#ff8c00</color> <!-- 暗桔黄色 -->
    <color name="fuchsia">#ff00ff</color> <!-- 紫红色 -->
    <color name="sandybrown">#f4a460</color> <!-- 沙褐色 -->
    <color name="darksalmon">#e9967a</color> <!-- 暗肉色 -->
    <color name="burlywood">#deb887</color> <!-- 实木色 -->
    <color name="plum">#dda0dd</color> <!-- 洋李色 -->
    <color name="gainsboro">#dcdcdc</color> <!-- 淡灰色 -->
    <color name="crimson">#dc143c</color> <!-- 暗深红色 -->
    <color name="palevioletred">#db7093</color> <!-- 苍紫罗兰色 -->
    <color name="goldenrod">#daa520</color> <!-- 金麒麟色 -->
    <color name="mediumvioletred">#c71585</color> <!-- 中紫罗兰色 -->
    <color name="silver">#c0c0c0</color> <!-- 银色 -->
    <color name="darkkhaki">#bdb76b</color> <!-- 暗黄褐色 -->
    <color name="rosybrown">#bc8f8f</color> <!-- 褐玫瑰红 -->
    <color name="mediumorchid">#ba55d3</color> <!-- 中粉紫色 -->
    <color name="darkgoldenrod">#b8860b</color> <!-- 暗金黄色 -->
    <color name="firebrick">#b22222</color> <!-- 火砖色 -->
    <color name="paleturquoise">#afeeee</color> <!-- 苍宝石绿 -->
    <color name="greenyellow">#adff2f</color> <!-- 黄绿色 -->
    <color name="lightblue">#add8e6</color> <!-- 亮蓝色 -->
    <color name="brown">#a52a2a</color> <!-- 褐色 -->
    <color name="sienna">#a0522d</color> <!-- 赭色 -->
    <color name="darkorchid">#9932cc</color> <!-- 暗紫色 -->
    <color name="palegreen">#98fb98</color> <!-- 苍绿色 -->
    <color name="darkviolet">#9400d3</color> <!-- 暗紫罗兰色 -->
    <color name="aquamarine">#7fffd4</color> <!-- 碧绿色 -->
    <color name="lawngreen">#7cfc00</color> <!-- 草绿色 -->
    <color name="indigo">#4b0082</color> <!-- 靛青色 -->
    <color name="mediumturquoise">#48d1cc</color> <!-- 中绿宝石 -->
    <color name="darkslateblue">#483d8b</color> <!-- 暗灰蓝色 -->
    <color name="steelblue">#4682b4</color> <!-- 钢兰色 -->
    <color name="dodgerblue">#1e90ff</color> <!-- 闪兰色 -->
    <color name="cyan">#00ffff</color> <!-- 青色 -->
    <color name="springgreen">#00ff7f</color> <!-- 春绿色 -->
    <color name="lime">#00ff00</color> <!-- 酸橙色 -->
    <color name="deepskyblue">#00bfff</color> <!-- 深天蓝色 -->
    <color name="green">#008000</color> <!-- 绿色 -->
    <color name="mediumblue">#0000cd</color> <!-- 中兰色 -->
    <color name="darkblue">#00008b</color> <!-- 暗蓝色 -->
    <color name="black">#000000</color> <!-- 黑色 -->

</resources>
