<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--ImageButton还不如Button呢！连文字都不能加！所以只能用Button了。-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e7d9d9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/down_menu_button_shape"
                android:drawableLeft="@drawable/money"
                android:text="@string/pay"
                android:textColor="#fff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/back_ground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/down_menu_button_shape"
                android:drawableLeft="@drawable/background_picture"
                android:text="@string/change_picture"
                android:textColor="#fff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/down_menu_button_shape"
                android:drawableLeft="@drawable/function"
                android:text="@string/soft_function"
                android:textColor="#fff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/down_menu_button_shape"
                android:drawableLeft="@drawable/designer"
                android:text="@string/aboutUs"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#e7d9d9"
                android:gravity="center"
                android:text="@string/isOver" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
